fixed overflow issue

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -34,7 +34,6 @@ body {
 
 .typewriter-text {
     overflow: hidden;
-    white-space: nowrap;
     animation:
         typing 0.15s steps(40, end),
 }
