--- a/src/app/screens/prompting/components/promptchatui.scss
+++ b/src/app/screens/prompting/components/promptchatui.scss
@@ -23,6 +23,7 @@
 
             .prompt-message-content {
                 width: fit-content;
+                max-width: 100%;
                 display: flex;
                 flex-direction: column;
                 gap: 0.25rem;
